Fix image blurriness

--- a/src/sections/about/about.scss
+++ b/src/sections/about/about.scss
@@ -18,14 +18,20 @@
   height: 26rem;
   object-fit: cover;
 
-  border: 7px solid #FFFFFF;
+  border: 7px solid #ffffff;
   box-sizing: border-box;
   box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.25);
   transform: rotate(-8.23deg);
 
+  image-rendering: -moz-crisp-edges; /* Firefox */
+  image-rendering: -o-crisp-edges; /* Opera */
+  image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
+  image-rendering: crisp-edges;
+  -ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
+
   @media only screen and (max-width: 48em) {
-    width: 15rem;
-    height: 17rem;
+    width: 20rem;
+    height: 24rem;
     margin-bottom: 5rem;
   }
 }
